--- a/kubernetes/apps/default/paperless/ks.yaml
+++ b/kubernetes/apps/default/paperless/ks.yaml
@@ -31,7 +31,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app paperless-database
+  name: paperless-database
   namespace: &namespace default
 spec:
   dependsOn:
@@ -55,7 +55,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app paperless-redis
+  name: paperless-redis
   namespace: &namespace default
 spec:
   dependsOn:
