fix: escaping of env variable

--- a/kubernetes/apps/default/paperless/app/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
               PAPERLESS_DEBUG: 1
               PAPERLESS_CONSUMER_POLLING: 60
               PAPERLESS_PORT: &port 8000
-              PAPERLESS_FILENAME_FORMAT: "{{created_year}}/{{correspondent}}/{{created}} {{title}}"
+              PAPERLESS_FILENAME_FORMAT: "{{ `{{created_year}}/{{correspondent}}/{{created}} {{title}}` }}"
               PAPERLESS_TIKA_ENABLED: 1
               PAPERLESS_TIKA_GOTENBERG_ENDPOINT: http://127.0.0.1:3000
               PAPERLESS_TIKA_ENDPOINT: http://127.0.0.1:9998
