--- a/kubernetes/apps/default/paperless/app/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless/app/helmrelease.yaml
@@ -48,8 +48,8 @@ spec:
               PAPERLESS_TIKA_ENDPOINT: http://127.0.0.1:9998
               PAPERLESS_OCR_USER_ARGS: '{"invalidate_digital_signatures": true}'
               PAPERLESS_APPS: allauth.socialaccount.providers.openid_connect
-              PAPERLESS_EMAIL_PORT: 25
               PAPERLESS_EMAIL_FROM: paperless@martinbjeldbak.com
+              PAPERLESS_EMAIL_HOST: smtp-relay
             envFrom:
               - secretRef:
                   name: paperless-secret
