fix: revert paperless changes, not working

--- a/kubernetes/apps/default/paperless/app/externalsecret.yaml
+++ b/kubernetes/apps/default/paperless/app/externalsecret.yaml
@@ -13,6 +13,7 @@ spec:
     template:
       data:
         PAPERLESS_DBPASS: "{{ .PAPERLESS_POSTGRES_PASSWORD }}"
+        PAPERLESS_EMAIL_HOST: "{{ .SMTP_RELAY_HOSTNAME }}"
         PAPERLESS_SOCIALACCOUNT_PROVIDERS: "{{ .PAPERLESS_SOCIALACCOUNT_PROVIDERS }}"
   dataFrom:
     - extract:
