--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -59,7 +59,7 @@ spec:
         enabled: true
         serviceMonitor:
           enabled: true
-      replicas: 1 #  TODO: 3 node cluster
+      replicas: 3
       rollOutPods: true
     pmtuDiscovery:
       enabled: true
