--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
       exclusive: false
     dashboards:
       enabled: true
-    devices: bond+,net0
+    devices: bond+,eno1
     enableIPv4BIGTCP: true
     endpointRoutes:
       enabled: true
