chore: rename to match kubesearch

--- a/kubernetes/apps/default/epicgames/app/externalsecret.yaml
+++ b/kubernetes/apps/default/epicgames/app/externalsecret.yaml
@@ -3,20 +3,20 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: epicgames-freegames
+  name: epicgames
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: epicgames-freegames-secret
+    name: epicgames-secret
     template:
       data:
-        EMAIL: "{{ .EPICGAMES_FREEGAMES_EMAIL }}"
+        EMAIL: "{{ .EPICGAMES_EMAIL }}"
         EMAIL_RECIPIENT_ADDRESS: "{{ .EPICGAMES_FREEGAMES_EMAIL }}"
         SMTP_HOST: "{{ .SMTP_RELAY_HOSTNAME }}"
   dataFrom:
     - extract:
-        key: epicgames-freegames
+        key: epicgames
     - extract:
         key: smtp-relay
