--- a/kubernetes/apps/default/epicgames/app/helmrelease.yaml
+++ b/kubernetes/apps/default/epicgames/app/helmrelease.yaml
@@ -3,11 +3,11 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: epicgames-freegames
+  name: epicgames
 spec:
   chartRef:
     kind: OCIRepository
-    name: epicgames-freegames
+    name: epicgames
   interval: 1h
   values:
     controllers:
