--- a/kubernetes/apps/default/epicgames/app/ocirepository.yaml
+++ b/kubernetes/apps/default/epicgames/app/ocirepository.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: OCIRepository
 metadata:
-  name: epicgames-freegames
+  name: epicgames
 spec:
   interval: 15m
   layerSelector:
