--- a/kubernetes/apps/default/epicgames/ks.yaml
+++ b/kubernetes/apps/default/epicgames/ks.yaml
@@ -3,10 +3,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: epicgames-freegames
+  name: epicgames
 spec:
   interval: 1h
-  path: ./kubernetes/apps/default/epicgames-freegames/app
+  path: ./kubernetes/apps/default/epicgames/app
   prune: true
   sourceRef:
     kind: GitRepository
