fix: reference to 1password secret

--- a/kubernetes/apps/default/epicgames/app/externalsecret.yaml
+++ b/kubernetes/apps/default/epicgames/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         EMAIL: "{{ .EPICGAMES_EMAIL }}"
-        EMAIL_RECIPIENT_ADDRESS: "{{ .EPICGAMES_FREEGAMES_EMAIL }}"
+        EMAIL_RECIPIENT_ADDRESS: "{{ .EPICGAMES_EMAIL }}"
         SMTP_HOST: "{{ .SMTP_RELAY_HOSTNAME }}"
   dataFrom:
     - extract:
