--- a/kubernetes/apps/default/calibre-web-automated/app/helmrelease.yaml
+++ b/kubernetes/apps/default/calibre-web-automated/app/helmrelease.yaml
@@ -48,8 +48,8 @@ spec:
             resources:
               requests:
                 cpu: 100m
-              # limits:
-              #   memory: 1Gi
+              limits:
+                memory: 512Mi
     service:
       app:
         ports:
