fix: target new hard drive nvme-Samsung_SSD_990_PRO_with_Heatsink_1TB_S7HFNS0YB00212L

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -82,7 +82,7 @@ spec:
       storage:
         useAllNodes: true
         useAllDevices: false
-        devicePathFilter: /dev/disk/by-id/nvme-Samsung_SSD_990_PRO_1TB_S7HDNJ0Y7.*_.*
+        devicePathFilter: /dev/disk/by-id/nvme-Samsung_SSD_990_PRO.*_1TB_S7H.*_.*
         config:
           osdsPerDevice: "1"
     cephBlockPools:
