--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -26,7 +26,7 @@ resources:
   - ./kometa/ks.yaml
   - ./mosquitto/ks.yaml
   - ./paperless/ks.yaml
-  # - ./peanut/ks.yaml
+  - ./peanut/ks.yaml
   - ./plex/ks.yaml
   - ./plex-auto-languages/ks.yaml
   - ./plex-trakt-sync/ks.yaml
@@ -35,7 +35,7 @@ resources:
   - ./qui/ks.yaml
   - ./radarr/ks.yaml
   - ./recyclarr/ks.yaml
-  # - ./romm/ks.yaml
+  - ./romm/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./seerr/ks.yaml
   - ./smtp-relay/ks.yaml
