--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -1,18 +1,4 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: OCIRepository
-metadata:
-  name: immich
-spec:
-  interval: 5m
-  layerSelector:
-    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-    operation: copy
-  ref:
-    tag: 0.9.3
-  url: oci://ghcr.io/immich-app/immich-charts/immich
----
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -36,7 +22,7 @@ spec:
       # renovate: datasource=github-releases depName=immich-app/immich
       tag: v1.143.1
     env:
-      DB_HOSTNAME: immich-database-rw
+      DB_HOSTNAME: immich-db-rw
       DB_DATABASE_NAME: immich
       LOG_LEVEL: verbose
       REDIS_HOSTNAME: immich-redis
@@ -68,7 +54,7 @@ spec:
           enabled: true
           existingClaim: immich-external-library-nas
       route:
-        main: # TODO: broken https://github.com/immich-app/immich-charts/issues/165
+        main:
           hostnames: ["{{ .Release.Name }}.martinbjeldbak.com"]
           parentRefs:
             - name: envoy-internal
