--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -21,7 +21,7 @@ resources:
   - ./home-assistant/ks.yaml
   - ./homebox/ks.yaml
   - ./icloudpd/ks.yaml
-  # - ./immich/ks.yaml
+  - ./immich/ks.yaml
   - ./karakeep/ks.yaml
   - ./kometa/ks.yaml
   - ./mosquitto/ks.yaml
