--- a/kubernetes/apps/network/certificates/import/externalsecret.yaml
+++ b/kubernetes/apps/network/certificates/import/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         annotations:
           cert-manager.io/alt-names: "*.martinbjeldbak.com,martinbjeldbak.com"
           cert-manager.io/certificate-name: martinbjeldbak-com
-          cert-manager.io/common-name: martinbjeldbak.com
+          cert-manager.io/common-name: ""
           cert-manager.io/ip-sans: ""
           cert-manager.io/issuer-group: ""
           cert-manager.io/issuer-kind: ClusterIssuer
