--- a/kubernetes/apps/default/immich/app/pvc.yaml
+++ b/kubernetes/apps/default/immich/app/pvc.yaml
@@ -54,3 +54,15 @@ spec:
   resources:
     requests:
       storage: 1T
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: immich-machine-learning-cache
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: ceph-block
