--- a/kubernetes/apps/default/immich/database/cluster.yaml
+++ b/kubernetes/apps/default/immich/database/cluster.yaml
@@ -7,10 +7,10 @@ metadata:
 spec:
   instances: 1
   # renovate: datasource=docker depName=ghcr.io/tensorchord/cloudnative-vectorchord
-  imageName: ghcr.io/tensorchord/cloudnative-vectorchord:16.9-0.4.2@sha256:649da2df5f079dd1f214e3a877cafd0208eff3779e9c60d14d243fbca5e11c97
+  imageName: ghcr.io/tensorchord/cloudnative-vectorchord:18.0-0.5.3@sha256:267f6cbb32af6e109e138a143c7e9dd5d44d68433ec2303f0c30e745c788d1a9
   bootstrap:
     recovery:
-      source: &externalCluster immich-database-v2
+      source: &externalCluster immich-db
   storage:
     size: 5Gi
     pvcTemplate:
