--- a/kubernetes/apps/default/authentik/database/cluster.yaml
+++ b/kubernetes/apps/default/authentik/database/cluster.yaml
@@ -6,7 +6,7 @@ metadata:
   name: authentik-db
 spec:
   instances: 1
-  imageName: ghcr.io/cloudnative-pg/postgresql:17.6-standard-trixie
+  imageName: ghcr.io/cloudnative-pg/postgresql:18.1-standard-trixie@sha256:7a72106d396a9c6d06ca25be191700c86031e0a06ccdeaf1a31da14f198cbbc4 
   bootstrap:
     recovery:
       source: &externalCluster authentik-db
