--- a/kubernetes/apps/default/immich/database/cluster.yaml
+++ b/kubernetes/apps/default/immich/database/cluster.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   instances: 1
   # renovate: datasource=docker depName=ghcr.io/tensorchord/cloudnative-vectorchord
-  imageName: ghcr.io/tensorchord/cloudnative-vectorchord:18.0-0.5.3@sha256:267f6cbb32af6e109e138a143c7e9dd5d44d68433ec2303f0c30e745c788d1a9
+  imageName: ghcr.io/tensorchord/cloudnative-vectorchord:17.5-0.4.2
   bootstrap:
     recovery:
       source: &externalCluster immich-db
