--- a/kubernetes/apps/default/immich/database/cluster.yaml
+++ b/kubernetes/apps/default/immich/database/cluster.yaml
@@ -8,9 +8,6 @@ spec:
   instances: 1
   # renovate: datasource=docker depName=ghcr.io/tensorchord/cloudnative-vectorchord
   imageName: ghcr.io/tensorchord/cloudnative-vectorchord:16.9-0.4.2@sha256:649da2df5f079dd1f214e3a877cafd0208eff3779e9c60d14d243fbca5e11c97
-  bootstrap:
-    recovery:
-      source: &externalCluster immich-db
   storage:
     size: 5Gi
     pvcTemplate:
@@ -33,9 +30,9 @@ spec:
       parameters:
         barmanObjectName: b2-immich
   externalClusters:
-    - name: *externalCluster
+    - name: immich-db
       plugin:
         name: barman-cloud.cloudnative-pg.io
         parameters:
           barmanObjectName: b2-immich
-          serverName: *externalCluster
+          serverName: immich-db
