--- a/kubernetes/apps/default/romm/database/cluster.yaml
+++ b/kubernetes/apps/default/romm/database/cluster.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   instances: 1
   # renovate: datasource=docker depName=ghcr.io/tensorchord/cloudnative-vectorchord
-  imageName: ghcr.io/cloudnative-pg/postgresql:18.1-standard-trixie@sha256:7a72106d396a9c6d06ca25be191700c86031e0a06ccdeaf1a31da14f198cbbc4 
+  imageName: ghcr.io/cloudnative-pg/postgresql:17.6-standard-trixie
   bootstrap:
     recovery:
       source: &externalCluster romm-database
