chore: simplify data mounts

--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -102,7 +102,6 @@ spec:
         server: alderaan.internal
         path: /volume1/data
         globalMounts:
-          - path: /data/downloads/qbittorrent
-            subPath: downloads/qbittorrent
+          - path: /data
       tmp:
         type: emptyDir
