--- a/kubernetes/apps/default/romm/database/cluster.yaml
+++ b/kubernetes/apps/default/romm/database/cluster.yaml
@@ -10,7 +10,7 @@ spec:
   imageName: ghcr.io/cloudnative-pg/postgresql:17.6-standard-trixie
   bootstrap:
     recovery:
-      source: &externalCluster romm-database
+      source: &externalCluster romm-db
   storage:
     size: 10Gi
     pvcTemplate:
