--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -37,6 +37,7 @@ resources:
   - ./recyclarr/ks.yaml
   - ./romm/ks.yaml
   - ./sabnzbd/ks.yaml
+  - ./scrypted/ks.yaml
   - ./seerr/ks.yaml
   - ./smtp-relay/ks.yaml
   - ./sonarr/ks.yaml
