--- a/kubernetes/apps/default/sabnzbd/ks.yaml
+++ b/kubernetes/apps/default/sabnzbd/ks.yaml
@@ -3,8 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app sabnzbd
-  namespace: &namespace default
+  name: sabnzbd
 spec:
   components:
     - ../../../../components/nfs-scaler
@@ -16,14 +15,12 @@ spec:
   path: ./kubernetes/apps/default/sabnzbd/app
   postBuild:
     substitute:
-      APP: *app
+      APP: sabnzbd
       VOLSYNC_CAPACITY: 1Gi
   prune: true
-  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: *namespace
-  timeout: 5m
+  targetNamespace: default
   wait: false
