chore: enable more logging in go2rtc

--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -83,6 +83,8 @@ spec:
           go2rtc.yaml: |-
             log:
               streams: error # Prevent log spam from UniFi Protect
+              api: trace
+              onvif: trace
             api:
               listen: :80
               origin: "*"
