chore: add homekit tracing

--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -85,6 +85,7 @@ spec:
               streams: error # Prevent log spam from UniFi Protect
               api: trace
               onvif: trace
+              homekit: trace
             api:
               listen: :80
               origin: "*"
