--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -18,6 +18,9 @@ spec:
             image:
               repository: ghcr.io/alexxit/go2rtc
               tag: 1.9.14@sha256:675c318b23c06fd862a61d262240c9a63436b4050d177ffc68a32710d9e05bae
+            envFrom:
+              - secretRef:
+                  name: "{{ .Release.Name }}-secret"
             probes:
               liveness: &probes
                 enabled: true
