--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -112,7 +112,7 @@ spec:
                 - ffmpeg:livingroom#audio=opus
               litterrobot:
                 - rtsp://${GO2RTC_USERNAME}:${GO2RTC_PASSWORD}@192.168.50.81/live0
-                - ffmpeg:livingroom#audio=opus
+                - ffmpeg:litterrobot#audio=opus
             homekit:
               livingroom:
                 name: Living Room
