--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -44,6 +44,14 @@ spec:
               limits:
                 memory: 512Mi
     defaultPodOptions:
+      annotations:
+        k8s.v1.cni.cncf.io/networks: |-
+          [{
+            "name": "iot",
+            "namespace": "kube-system",
+            "ips": ["192.168.30.21/24"],
+            "mac": "c6:07:27:af:fb:53"
+          }]
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
@@ -61,8 +69,6 @@ spec:
           lbipam.cilium.io/ips: 192.168.42.124
         externalTrafficPolicy: Local
         ports:
-          streams-http:
-            port: 80
           streams-rtsp:
             port: 554
           streams-webrtc-tcp:
