chore: try adding literrobot back again

--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -92,13 +92,10 @@ spec:
       config:
         data:
           go2rtc.yaml: |-
-            # yaml-language-server: $schema=https://raw.githubusercontent.com/AlexxIT/go2rtc/master/www/schema.json
             ---
+            # yaml-language-server: $schema=https://raw.githubusercontent.com/AlexxIT/go2rtc/master/www/schema.json
             log:
               streams: error # Prevent log spam from UniFi Protect
-              api: trace
-              onvif: trace
-              homekit: trace
             api:
               listen: :80
               origin: "*"
@@ -124,6 +121,8 @@ spec:
             homekit:
               livingroom:
                 name: Living Room
+              litterrobot:
+                name: Litter-Robot
     persistence:
       config-file:
         type: configMap
