fix: add credentials after pairing

--- a/kubernetes/apps/default/go2rtc/app/externalsecret.yaml
+++ b/kubernetes/apps/default/go2rtc/app/externalsecret.yaml
@@ -14,6 +14,12 @@ spec:
       data:
         GO2RTC_USERNAME: "{{ .GO2RTC_USERNAME }}"
         GO2RTC_PASSWORD: "{{ .GO2RTC_PASSWORD }}"
+        GO2RTC_HOMEKIT_CLIENT_ID_0: "{{ .GO2RTC_HOMEKIT_CLIENT_PUBLIC_0 }}"
+        GO2RTC_HOMEKIT_CLIENT_PUBLIC_0: "{{ .GO2RTC_HOMEKIT_CLIENT_PUBLIC_0 }}"
+        GO2RTC_HOMEKIT_CLIENT_ID_1: "{{ .GO2RTC_HOMEKIT_CLIENT_ID_1 }}"
+        GO2RTC_HOMEKIT_CLIENT_PUBLIC_1: "{{ .GO2RTC_HOMEKIT_CLIENT_PUBLIC_1 }}"
+        GO2RTC_HOMEKIT_CLIENT_ID_2: "{{ .GO2RTC_HOMEKIT_CLIENT_ID_2 }}"
+        GO2RTC_HOMEKIT_CLIENT_PUBLIC_2: "{{ .GO2RTC_HOMEKIT_CLIENT_PUBLIC_2 }}"
   dataFrom:
     - extract:
         key: go2rtc
