--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -127,10 +127,10 @@ spec:
                   - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_2}&client_public={GO2RTC_HOMEKIT_CLIENT_PUBLIC_2}&permissions=0
               litterrobot:
                 name: Litter-Robot
-                pairings:
-                  - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_0}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_0}&permissions=1
-                  - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_1}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_1}&permissions=1
-                  - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_2}&client_public={GO2RTC_HOMEKIT_CLIENT_PUBLIC_2}&permissions=0
+                # pairings:
+                #   - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_0}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_0}&permissions=1
+                #   - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_1}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_1}&permissions=1
+                #   - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_2}&client_public={GO2RTC_HOMEKIT_CLIENT_PUBLIC_2}&permissions=0
     persistence:
       config-file:
         type: configMap
