fix: use recreate strategy to update pod, otherwise it shares ips

--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
   values:
     controllers:
       go2rtc:
-        strategy: RollingUpdate
+        strategy: Recreate
         containers:
           app:
             image:
