--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -122,7 +122,7 @@ spec:
               litterrobot:
                 - rtsp://${GO2RTC_USERNAME}:${GO2RTC_PASSWORD}@192.168.50.81/live0
                 - ffmpeg:litterrobot#video=h264#hardware
-                - ffmpeg:livingroom#audio=opus
+                - ffmpeg:litterrobot#audio=opus
             homekit:
               livingroom:
                 name: Living Room
