--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -47,9 +47,9 @@ spec:
       annotations:
         k8s.v1.cni.cncf.io/networks: |-
           [{
-            "name": "iot",
+            "name": "trusted",
             "namespace": "kube-system",
-            "ips": ["192.168.30.23/24"],
+            "ips": ["192.168.20.30/24"],
             "mac": "c6:07:27:af:fb:53"
           }]
       securityContext:
