--- a/kubernetes/apps/kube-system/multus/networks/trusted.yaml
+++ b/kubernetes/apps/kube-system/multus/networks/trusted.yaml
@@ -3,21 +3,21 @@
 apiVersion: k8s.cni.cncf.io/v1
 kind: NetworkAttachmentDefinition
 metadata:
-  name: iot
+  name: trusted
 spec:
   config: |-
     {
       "cniVersion": "1.1.0",
-      "name": "iot",
+      "name": "trusted",
       "plugins": [
         {
           "type": "macvlan",
-          "master": "bond0.30",
+          "master": "bond0.20",
           "mode": "bridge",
           "ipam": {
             "type": "static",
             "routes": [
-              {"dst": "0.0.0.0/0", "gw": "192.168.30.1"}
+              {"dst": "0.0.0.0/0", "gw": "192.168.20.1"}
             ]
           }
         },
