--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -117,9 +117,9 @@ spec:
                     - stun:stun.cloudflare.com:3478
             streams:
               livingroom:
-                - ffmpeg:onvif://${GO2RTC_USERNAME}:${GO2RTC_PASSWORD}@192.168.50.80:2020#video=h264#level=41#audio=opus
+                - ffmpeg:onvif://${GO2RTC_USERNAME}:${GO2RTC_PASSWORD}@192.168.50.80:2020#video=copy#audio=opus
               litterrobot:
-                - ffmpeg:rtsp://${GO2RTC_USERNAME}:${GO2RTC_PASSWORD}@192.168.50.81/live0#audio=opus
+                - ffmpeg:rtsp://${GO2RTC_USERNAME}:${GO2RTC_PASSWORD}@192.168.50.81/live0#video=copy#audio=opus
             homekit:
               livingroom:
                 name: Living Room
