--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -33,8 +33,8 @@ spec:
             resources:
               requests:
                 cpu: 10m
-              limits:
-                memory: 2Gi
+              # limits:
+              #   memory: 2Gi
     defaultPodOptions:
       annotations:
         k8s.v1.cni.cncf.io/networks: |-
