--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -13,6 +13,15 @@ spec:
     controllers:
       go2rtc:
         strategy: Recreate
+        initContainers:
+          copy-config:
+            image:
+              repository: busybox
+              tag: latest
+            command:
+              - sh
+              - -c
+              - cp /tmp/go2rtc.yaml /config/go2rtc.yaml
         containers:
           app:
             image:
@@ -134,9 +143,13 @@ spec:
                   - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_1}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_1}&permissions=1
                   - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_2}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_2}&permissions=0
     persistence:
+      config:
+        type: emptyDir
+        globalMounts:
+          - path: /config
       config-file:
         type: configMap
         identifier: config
         globalMounts:
-          - path: /config/go2rtc.yaml
+          - path: /tmp/go2rtc.yaml
             subPath: go2rtc.yaml
