feat: update imae and templates

--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -13,15 +13,6 @@ spec:
     controllers:
       go2rtc:
         strategy: Recreate
-        initContainers:
-          copy-config:
-            image:
-              repository: busybox
-              tag: latest
-            command:
-              - sh
-              - -c
-              - cp /tmp/go2rtc.yaml /config/go2rtc.yaml
         containers:
           app:
             image:
@@ -104,11 +95,11 @@ spec:
             ---
             # yaml-language-server: $schema=https://raw.githubusercontent.com/AlexxIT/go2rtc/master/www/schema.json
             log:
-              level: trace
+              # level: trace
               streams: error # Prevent log spam from UniFi Protect
-              api: trace
-              onvif: trace
-              homekit: trace
+              # api: trace
+              # onvif: trace
+              # homekit: trace
             api:
               listen: :80
               origin: "*"
@@ -129,10 +120,19 @@ spec:
                 - onvif://${GO2RTC_USERNAME}:${GO2RTC_PASSWORD}@192.168.50.80:2020
               litterrobot:
                 - rtsp://${GO2RTC_USERNAME}:${GO2RTC_PASSWORD}@192.168.50.81/live0
-                - ffmpeg:litterrobot#audio=opus#audio=copy
-            homekit:
-              litterrobot:
-                name: Litter-Robot
+            # homekit:
+            #   livingroom:
+            #     name: Living Room
+            #     pairings:
+            #       - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_0}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_0}&permissions=1
+            #       - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_1}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_1}&permissions=1
+            #       - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_2}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_2}&permissions=0
+            #   litterrobot:
+            #     name: Litter-Robot
+            #     pairings:
+            #       - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_0}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_0}&permissions=1
+            #       - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_1}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_1}&permissions=1
+            #       - client_id=${GO2RTC_HOMEKIT_CLIENT_ID_2}&client_public=${GO2RTC_HOMEKIT_CLIENT_PUBLIC_2}&permissions=0
     persistence:
       config:
         type: emptyDir
